--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div class="contact-div contact-form">
-            <form action="mailto:tuba.13899@gmail.com"> 
+            <form> 
             	<input type="text" name="name" placeholder="Enter your name"> 
             	<input type="text" name="email" placeholder="Enter your email"> 
             	<input type="text" name="subject" placeholder="Enter your subject"> 
